compilateurDeca/src/test/deca/context/invalid/objet/inheritance/extension_non_declare.deca
// Description:
//    Test de contexte : extension d'une classe non déclarée.
//
// Resultats:
//    Erreur contextuelle : La classe 'B' n'existe pas.
//
// Historique:
//    cree le 13/01/2026

class A extends B {
}
{
}